feature(backend): method reorder on portfolio service